# n_body_simulation

./: .gitignore  CMakeLists.txt  README.md  main.cu
include/: consts.hpp  display.hpp  kernel.cuh  physics.hpp  shader.hpp  shape.hpp  simulation.cuh
plots/: plot_history.py
shaders/: shader.vs
src/: display.cpp  kernel.cu  shape.cpp  simulation.cu
tests/: test_compute.cu  test_display.cpp
tests/mocks/: mockShader.hpp
